# CG2020

./: README.md
Assignment/: README.md  indicative-guide.md
Debugging Tips/: Debugging.md
RedNoise/: CMakeLists.txt  Makefile  materials.mtl  textured-cornell-box.mtl
RedNoise/libs/sdw/: Camera.h  Colour.cpp  Colour.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  ModelTriangle.h  ObjLoader.cpp  ObjLoader.h
RedNoise/src/: RedNoise.cpp
Weekly Workbooks/: 01 Introduction and Orientation
Weekly Workbooks/01 Introduction and Orientation/: 00 Briefing.txt  README.md  Vagrantfile  index.html
Weekly Workbooks/01 Introduction and Orientation/01 Introduction/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/02 Language and Libraries/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/03 Using Your Own Machine/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/03 Using Your Own Machine/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/04 Using the Lab Machines/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/04 Using the Lab Machines/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/05 The Template Project/hints/: text.txt
Weekly Workbooks/01 Introduction and Orientation/05 The Template Project/text/: text.txt
Weekly Workbooks/01 Introduction and Orientation/06 Understanding the Template/text/: text.txt
Weekly Workbooks/02 Pixels and Drawing/: README.md  index.html
Weekly Workbooks/02 Pixels and Drawing/01 Introduction/text/: text.txt
Weekly Workbooks/02 Pixels and Drawing/02 Single Element Numerical Interpolation/text/: text.txt
Weekly Workbooks/03 Triangles and Textures/: README.md  index.html
Weekly Workbooks/04 Wireframes and Rasterising/: README.md  index.html
Weekly Workbooks/05 Navigation and Transformation/: README.md  index.html
Weekly Workbooks/06 Ray Tracing and Intersection/: README.md  index.html
Weekly Workbooks/07 Lighting and Shading/: README.md  index.html
Weekly Workbooks/08 Advanced Topics Playlist/: README.md  index.html
(+91 files in other folders)
